--- a/ElReg/requirements.txt
+++ b/ElReg/requirements.txt
@@ -1,2 +1,6 @@
-django==1.4.1
+django==1.4.2
+suds==0.4
+redis==2.7.1
 git+https://github.com/django-debug-toolbar/django-debug-toolbar.git
+git+https://github.com/getsentry/sentry.git
+git+https://github.com/getsentry/raven-python.git
