--- a/ElReg/requirements.txt
+++ b/ElReg/requirements.txt
@@ -4,6 +4,8 @@ redis==2.7.1
 simplejson==2.6.2
 mysql-python
 pytz
+PIL #http://obroll.com/install-python-pil-python-image-library-on-ubuntu-11-10-oneiric/
 south
-pip install -e hg+http://bitbucket.org/bkroeze/django-livesettings/#egg=django-livesettings
-pip install -e hg+http://bitbucket.org/bkroeze/django-keyedcache/#egg=django-keyedcache
+django-simple-captcha
+-e hg+http://bitbucket.org/bkroeze/django-livesettings/#egg=django-livesettings
+-e hg+http://bitbucket.org/bkroeze/django-keyedcache/#egg=django-keyedcache
