--- a/ElReg/requirements.txt
+++ b/ElReg/requirements.txt
@@ -1,4 +1,12 @@
 django==1.4.1
 redis==2.7.1
-PIL #http://obroll.com/install-python-pil-python-image-library-on-ubuntu-11-10-oneiric/
 mysql-python
+PIL #http://obroll.com/install-python-pil-python-image-library-on-ubuntu-11-10-oneiric/
+
+simplejson==2.6.2
+pytz
+suds==0.4
+south
+django-simple-captcha
+-e hg+http://bitbucket.org/bkroeze/django-livesettings/#egg=django-livesettings
+-e hg+http://bitbucket.org/bkroeze/django-keyedcache/#egg=django-keyedcache
