--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,15 @@
 # .gitignore
 *.DS_Store
 *.idea
+*debug*
 
 *.pyc
 *.exe
 *.dll
 *.db
 build/*
-migrations/*
+migrations/
+media/
 settings_local.py
 static_admin*
 to_slave.py
