--- a/ElReg/requirements.txt
+++ b/ElReg/requirements.txt
@@ -1,4 +1,4 @@
-django==1.4.1
+django
 redis==2.7.1
 mysql-python
 PIL #http://obroll.com/install-python-pil-python-image-library-on-ubuntu-11-10-oneiric/
@@ -8,5 +8,5 @@ pytz
 suds==0.4
 south
 django-simple-captcha
--e hg+http://bitbucket.org/bkroeze/django-livesettings/#egg=django-livesettings
--e hg+http://bitbucket.org/bkroeze/django-keyedcache/#egg=django-keyedcache
+django-livesettings
+django-keyedcache
