--- a/ElReg/requirements.txt
+++ b/ElReg/requirements.txt
@@ -1,7 +1,7 @@
 django==1.4.1
 redis==2.7.1
 mysql-python
-PIL #http://obroll.com/install-python-pil-python-image-library-on-ubuntu-11-10-oneiric/
+pillow
 
 simplejson==2.6.2
 pytz
